fix(TabNavigationView): TabNavigationView DropdownMenu z-index update
The dropdown menu of TabNavigationView should not be blocked by tab content's SpinnerOverlay.

--- a/packages/ringcentral-widgets/components/DropdownNavigationView/styles.scss
+++ b/packages/ringcentral-widgets/components/DropdownNavigationView/styles.scss
@@ -4,6 +4,5 @@
   padding: 7px 0;
   background-color: #ffffff;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.15);
-  box-shadow: 0 2px 5px 0 #cccccc;
   z-index: 11;
 }
